WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33826
REGRESSION (52082): Crash on worker thread when reloading
http://radnan.public.iastate.edu/procedural/
https://bugs.webkit.org/show_bug.cgi?id=33826
Summary
REGRESSION (52082): Crash on worker thread when reloading http://radnan.publi...
Geoffrey Garen
Reported
2010-01-18 22:34:17 PST
REGRESSION (52082): Crash on worker thread when reloading
http://radnan.public.iastate.edu/procedural/
Attachments
Patch
(7.40 KB, patch)
2010-01-18 22:52 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
patch - now with changelog
(8.36 KB, patch)
2010-01-18 22:54 PST
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2010-01-18 22:52:19 PST
Created
attachment 46887
[details]
Patch
Geoffrey Garen
Comment 2
2010-01-18 22:54:11 PST
Created
attachment 46888
[details]
patch - now with changelog
Geoffrey Garen
Comment 3
2010-01-18 22:54:53 PST
<
rdar://problem/7552372
>
Oliver Hunt
Comment 4
2010-01-18 22:57:00 PST
Comment on
attachment 46888
[details]
patch - now with changelog r=me
Geoffrey Garen
Comment 5
2010-01-18 23:00:55 PST
Committed
r53455
: <
http://trac.webkit.org/changeset/53455
>
Gavin Barraclough
Comment 6
2010-01-19 00:26:56 PST
Reverted in
r53459
, since this broke a couple of JSC tests.
Geoffrey Garen
Comment 7
2010-01-19 00:39:33 PST
Committed revision 53460 with jsc tests fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug